Fix javascript (map was not showing after clicking Admin).

--- a/WcaOnRails/app/assets/stylesheets/competitions.scss
+++ b/WcaOnRails/app/assets/stylesheets/competitions.scss
@@ -199,7 +199,8 @@ $venue-map-wrapper-height: 400px;
     display: none;
   }
 
-  &.competitions-map #competitions-list {
+  &.competitions-map #competitions-list,
+  &.competitions-map #competitions-admin {
     display: none;
   }
 
